# buzale

buzale/: AUTHORS  Makefile  Makefile.am  Makefile.in  acconfig.h  aclocal.m4  buzale_conf  buzale_conf.in  config.cache  config.h  config.status  configure  configure.in  cvs_env.src  mkinstalldirs
buzale/bilder/: 2.1.xpm  5.10.xpm  Apfel.xpm  Ball.xpm  Makefile  Makefile.am  Makefile.in
buzale/bilder/.xvpics/: 1.10.xpm  10.10.xpm  11.20.xpm  12.20.xpm  13.20.xpm  13.21.xpm  14.20.xpm  15.20.xpm  17.20.xpm  18.1.xpm  18.20.xpm  18.21.xpm  18.22.xpm  18.23.xpm  19.20.xpm  19.21.xpm  2.1.xpm  2.10.xpm  2.11.xpm  2.20.xpm  20.1.xpm  20.20.xpm  20.21.xpm  3.1.xpm  3.2.xpm  3.20.xpm  3.21.xpm  4.1.xpm  4.2.xpm  4.20.xpm  5.1.xpm  5.10.xpm  5.2.xpm  5.20  5.20.xpm  6.1.xpm  7.1.xpm  7.2.xpm  7.20.xpm  8.1.xpm  (+61 more)
buzale/html/: index.html
buzale/html/bilder/: Spielaufbau.fig  hintergrund.xcf
buzale/html/bilder/.xvpics/: hintergrund.xcf
buzale/sounds/: Makefile.am
buzale/src/: BuZaLe.xpm  Makefile  Makefile.am  Makefile.in  allg.cc  allg.hh  bild.cc  bild.hh  button.cc  button.hh  buzale  config.cc  config.hh  count.cc  count.hh  count.xpm  deutsch.xpm  ende.cc  ende.hh  ende1.xpm  ende2.xpm  exit.xpm  fenster.cc  fenster.hh  feuer1.xpm  feuer2.xpm  feuer3.xpm  hilfe.xpm  icon.xpm  input.cc  input.hh  intro.cc  intro.hh  label.cc  label.hh  logik.cc  logik.hh  main.cc  mathe.xpm  menu.cc  (+22 more)
buzale/src/.deps/: allg.P  bild.P  button.P  config.P  count.P  ende.P  fenster.P  input.P  intro.P  label.P  logik.P  main.P  menu.P  picture.P  rand.P  sound.P  tasten.P  timer.P  zschnur.P
buzale/src/.xvpics/: deutsch.xpm  exit.xpm  feuer1.xpm  feuer2.xpm  feuer3.xpm  icon.h  icon1.xpm  icon2.xpm  mathe.xpm  stop.xpm  weiter.xpm  zschnur.xpm
