SUBDIRS = src

BUZALEDATEN = buzale_conf        \
	      bilder/Apfel.xpm   \
	      bilder/Ball.xpm    \
	      bilder/2.1.xpm     \
	      bilder/5.10.xpm    \
	      sounds/richtig.wav \
	      sounds/Schade.wav  \
	      sounds/Level1.wav  \
	      sounds/SuperSuper.wav

EXTRA_DIST  = $(BUZALEDATEN)
buzale_DATA = $(BUZALEDATEN)
buzaledir   = $(BUZALEDATA)
