
INCLUDES = $(GTK_CFLAGS)

bin_PROGRAMS = buzale

AM_CPPFLAGS = -DBUZALEDATA=\""$(BUZALEDATA)"\"

buzale_SOURCES = main.cc     \
	 	 tasten.cc   \
	 	 bild.cc     \
		 menu.cc     \
	 	 logik.cc    \
	 	 label.cc    \
	 	 button.cc   \
	 	 count.cc    \
	 	 input.cc    \
	 	 config.cc   \
	 	 rand.cc     \
	 	 sound.cc    \
	 	 allg.cc     \
	 	 fenster.cc  \
	 	 intro.cc    \
	 	 ende.cc     \
	 	 picture.cc  \
		 timer.cc    \
		 zschnur.cc  \
		 allg.hh     \
		 bild.hh     \
		 button.hh   \
		 config.hh   \
		 count.hh    \
		 ende.hh     \
		 fenster.hh  \
		 input.hh    \
		 intro.hh    \
		 label.hh    \
		 logik.hh    \
		 menu.hh     \
		 picture.hh  \
		 rand.hh     \
		 sound.hh    \
		 tasten.hh   \
		 timer.hh    \
		 zschnur.hh  \
		 BuZaLe.xpm  \
		 count.xpm   \
		 deutsch.xpm \
		 ende1.xpm   \
		 ende2.xpm   \
		 exit.xpm    \
		 feuer1.xpm  \
		 feuer2.xpm  \
		 feuer3.xpm  \
		 hilfe.xpm   \
		 icon.xpm    \
		 mathe.xpm   \
		 tdeutsch.xpm\
		 tmathe.xpm  \
		 stop.xpm    \
		 weiter.xpm  \
		 zschnur.xpm

buzale_LDADD = $(GTK_LIBS)